# wasm-gravity

./: Cargo.toml  README.md  index.html
src/: buttons.rs  main.rs
